# btr-mt4-stack

./: .cursorrules  .env.example  .gitignore  Makefile  README.md  test_logging_demo.rs
Experts/: BTRMitchRedisDemo.mq4  BTRMitchTickerDemo.mq4
Include/: BTRHashMap.mqh  BTRIds.mqh  BTRMitchModel.mqh  BTRMitchSerializer.mqh  BTRRedisClient.mqh  BTRUtils.mqh
Scripts/: BTRMitchTest.mq4  BTRRedisMitchTest.mq4  BTRRedisTest.mq4
rust_dlls/: Cargo.toml  build.sh
rust_dlls/src/: lib.rs  test_runner.rs
