[package]
name = "redis_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "redis_client"
crate-type = ["cdylib"]

[dependencies]
# Redis client for actual Redis operations
redis = "0.27"
# Thread-safe static initialization for global connection state
lazy_static = "1.4"
# For FFI tests
libloading = "0.8"
# For robust URL construction and parsing
url = "2.5"

[dev-dependencies]
libloading = "0.8"

[[bin]]
name = "test_runner"
path = "src/test_runner.rs"

[profile.release]
panic = "abort"   # Use abort for production builds
lto = true
codegen-units = 1
opt-level = 3
strip = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi", "processthreadsapi"] }
