[package]
name = "mitch_mt4"
version = "0.1.0"
edition = "2021"

[lib]
name = "mitch_mt4"
crate-type = ["cdylib"]

[dependencies]
# Core M-ITCH implementation
mitch = { path = "../../../../specs/mitch/impl/rust", features = ["ffi", "redis-client", "all-networking"] }

# Redis client for actual Redis operations
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Async runtime for networking
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }

# Thread-safe static initialization for global connection state
lazy_static = "1.4"

# For FFI tests
libloading = "0.8"

# For robust URL construction and parsing
url = "2.5"

# FFI string handling
libc = "0.2"

[dev-dependencies]
libloading = "0.8"

[[bin]]
name = "test_runner"
path = "src/test_runner.rs"

[profile.release]
panic = "abort"   # Use abort for production builds
lto = true
codegen-units = 1
opt-level = 3
strip = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi", "processthreadsapi"] }